--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Apartado 4 - Ejemplo Guiado - Kotlin</string>
+    <string name="logo_uja">Logo UJA</string>
+    <string name="cambiar_imagen">Cambiar Imagen</string>
+    <string name="establecer_fondo">Establecer fondo</string>
 </resources>
