Click del botón cambiar imagen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="logo_uja">Logo UJA</string>
     <string name="cambiar_imagen">Cambiar Imagen</string>
     <string name="establecer_fondo">Establecer fondo</string>
+    <string name="isla_kotlin">Isla Kotlin</string>
 </resources>
